assets/styles/base.css
div, span {
  box-sizing: border-box;
}

.large-text {
  font-size: 20px;
  line-height: 2rem;
}

h1, h2, h3, h4, h5 {
  line-height: 1.2em;
}

h2 {
  font-size: 2rem;
  margin: 1rem 0;
}

:focus {
  outline-color: transparent;
  outline-style: none;
}

a {
  text-decoration: none;
  color: #47b5e3;
  padding: 0 0 0.2rem 0;
}

p {
  color: rgba(255,255,255,0.8);
}

p, ul {
  margin: 0 0 2rem 0;
}

a:hover {
  color: #47b5e3;
}

code {
  background: rgba(255,255,255,0.1);
  padding: 4px;
  border-radius: 2px;
}

pre {
  overflow-x: auto;
  padding: 1em;
  border-left-width: 5px;
  margin: 0 0 2em 0;
  font-size: 0.875em;
  white-space: pre;
  word-wrap: normal;
}

pre code {
  background: none;
}

.layout {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.page-nav {
  box-sizing: border-box;
  position: fixed;
  padding: 0.5rem;
  width: 100%;
  background: transparent;
}

.button {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 3rem;
  padding: 0 2rem;
  white-space: nowrap;
  line-height: 3rem;
  border: 1px solid #47b5e3;
  border-radius: 2px;
  color: #47b5e3;
  font-size: 1.25rem;
  transition: background-color, 0.15s;
  text-align: center;
}

.button:hover {
  background: #47b5e3;
  border-color: #47b5e3 !important;
  color: #FFF;
}

.button:active {
  background: #47b5e3;
  color: #FFF;
  border-top: 2px solid #0066CC;
}



/* Generated by Font Squirrel (http://www.fontsquirrel.com) on December 14, 2014 */

@font-face {
  font-family: 'Lato';
  src: url('/assets/fonts/lato-bold-webfont.eot');
  src: url('/assets/fonts/lato-bold-webfont.eot?#iefix') format('embedded-opentype'),
      url('/assets/fonts/lato-bold-webfont.woff2') format('woff2'),
      url('/assets/fonts/lato-bold-webfont.woff') format('woff'),
      url('/assets/fonts/lato-bold-webfont.ttf') format('truetype'),
      url('/assets/fonts/lato-bold-webfont.svg#latobold') format('svg');
  font-weight: bold;
  font-style: bold;
}

@font-face {
  font-family: 'Lato';
  src: url('/assets/fonts/lato-light-webfont.eot');
  src: url('/assets/fonts/lato-light-webfont.eot?#iefix') format('embedded-opentype'),
      url('/assets/fonts/lato-light-webfont.woff2') format('woff2'),
      url('/assets/fonts/lato-light-webfont.woff') format('woff'),
      url('/assets/fonts/lato-light-webfont.ttf') format('truetype'),
      url('/assets/fonts/lato-light-webfont.svg#latolight') format('svg');
  font-weight: normal;
  font-style: normal;
}

